# NGE

./: .gitignore  CMakeLists.txt  CMakeSettings.json  main.cpp  main.hpp
data_objects/: box.cpp  box.hpp  character.cpp  character.hpp  image.cpp  image.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  motion_manipulation_object.cpp  motion_manipulation_object.hpp  motion_vector.cpp  motion_vector.hpp  position.cpp  position.hpp  positioned_box.cpp  positioned_box.hpp  rect.cpp  rect.hpp  rotation.cpp  rotation.hpp  shader_program.cpp  shader_program.hpp  size.cpp  size.hpp  sprite.cpp  sprite.hpp  texture.cpp  texture.hpp  track_stamp.hpp  vec.hpp  vertex.cpp  vertex.hpp  winmain_config.hpp
enums/: capability.hpp  component_type.hpp  event_type.hpp  key.cpp  key.hpp  layout_flags.hpp  layout_origin.hpp  log_level.hpp  modifier.cpp  modifier.hpp  mouse_button.h  shader_program_type.hpp
game/: game_component_type.hpp  npc_component.cpp  npc_component.hpp  scoreboard_widget.cpp  scoreboard_widget.hpp  stats_manager.cpp  stats_manager.hpp  user_object_type.hpp
graph/: button_widget.cpp  button_widget.hpp  rect_widget.cpp  rect_widget.hpp  text_widget.cpp  text_widget.hpp  widget.cpp  widget.hpp
infrastructure/: assertions.hpp  common_fallbacks.cpp  common_fallbacks.hpp  game.cpp  game.hpp  logger.cpp  logger.hpp  resource_loader.cpp  resource_loader.hpp  save_manager.cpp  save_manager.hpp  type_helpers.hpp
interface/: abstract_stage.hpp  game_window.cpp  game_window.hpp  graph_stage.cpp  (+9 more)
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: gl.h  glx.h  wgl.h
(+64 files in other folders)
