cmake_minimum_required(VERSION 3.0)
project(glad)

add_library(glad include/glad/gl.h src/gl.c)
target_include_directories(glad PUBLIC include/)

if (UNIX)
    add_library(glx include/glad/glx.h src/glx.c)
    target_include_directories(glx PUBLIC include/)
endif ()
if (WIN32)
    add_library(wgl include/glad/wgl.h src/wgl.c)
    target_link_libraries(wgl gdi32)
    target_link_libraries(wgl opengl32)
    target_include_directories(wgl PUBLIC include/)
endif ()
